2019_lsp_project1/reference/ERROR/20190010/12_error.txt
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190010/12.c: In function ‘ssu_thread_consumer’:
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190010/12.c:31:6: error: ‘i’ undeclared (first use in this function)
  for(i = 1; i <= 300; i++) {
      ^
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190010/12.c:31:6: note: each undeclared identifier is reported only once for each function it appears in
/home/cyr/ds/2019_lsp_project1/project_source/STD_DIR/20190010/12.c:37:3: error: ‘sum’ undeclared (first use in this function)
   sum += buf[--length];
   ^~~
